we can submit fuel quotes!
